# cpp

./: .gitignore  pack
oving_1/: CMakeLists.txt  oppg_a.cpp  oppg_b.cpp  temperatur.txt
oving_2/: CMakeLists.txt  oppgave_1.cpp  oppgave_2.txt  oppgave_3.txt  oppgave_4.cpp  oppgave_5.cpp  oppgave_6.cpp
oving_3/: CMakeLists.txt  commodity.cpp  commodity.hpp  oppgave_1.hpp  oppgave_2.cpp  oppgave_4.cpp
oving_4/: CMakeLists.txt  oppgave_1.cpp  oppgave_2.cpp
oving_5/: CMakeLists.txt  chess.cpp
oving_6/: CMakeLists.txt  chess.cpp  main.cpp  oppgave_1.cpp  oppgave_2.cpp
oving_7/: CMakeLists.txt  fraction.cpp  fraction.hpp  oppgave_1.cpp  oppgave_1b.txt  oppgave_2.cpp  set.cpp  set.hpp
oving_8/: CMakeLists.txt  oppgave_1.cpp  oppgave_2.cpp  pair.cpp
